--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -7,3 +7,8 @@
 @import "page-news";
 @import "page-app";
 @import "footer";
+@import "page-description";
+@import "page-popular-track";
+@import "page-discography";
+@import "page-similar";
+
