--- a/src/styles/scss/header.scss
+++ b/src/styles/scss/header.scss
@@ -51,7 +51,12 @@ p, ul {
             flex-wrap: wrap;
             list-style: none;
             padding: 0;
-            @include gap-24px
+            @include gap-24px;
+
+            a {
+                color: $white;
+                text-decoration: none;
+            }
         }
     }
 
