--- a/src/styles/scss/variables.scss
+++ b/src/styles/scss/variables.scss
@@ -8,5 +8,9 @@ $main-section-bg: #08020D;
 $footer-bg: linear-gradient(265.08deg, #95390C 14.9%, #5328A1 68.95%);
 $footer-text-color: #E0E0E0;
 
+// === artist.html ===
+$purple: #5328A1;
+// === /artist.html ===
+
 $bg-list: 'subscribe_1', 'subscribe_2', 'subscribe_3';
 $bg-list-length: length($bg-list);
